--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,47 @@
     transform: rotate(360deg);
   }
 }
+
+#box{
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+#box1{
+  width: 200px;
+  height: 200px;
+  color: black;
+  text-align: center;
+  border: 5px solid white;
+  background-color: #61dafb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 20px;
+}
+
+#box2{
+  width: 200px;
+  height: 200px;
+  color: black;
+  text-align: center;
+  border: 5px solid white;
+  background-color: grey;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 20px;
+}
+
+#box3{
+  width: 200px;
+  height: 200px;
+  color: black;
+  text-align: center;
+  border: 5px solid white;
+  background-color: palevioletred;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
